# DeepLoop

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  environment.llm.yml  environment.yml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
docker/: release-validation.Dockerfile
docs/: getting-started.md  index.md
examples/: README.md  recursive-agent-runtime-provider.example.yaml
schemas/: agent-handoff.schema.json  confound-guard-report.schema.json  ledger-entry.schema.json  mission-acceptance-criteria.schema.json  mission-action.schema.json  mission-artifact-package.schema.json  mission-branch-record.schema.json  mission-decision.schema.json  mission-meta-eval.schema.json  mission-operator-request.schema.json  mission-state.schema.json  recursive-agent-result.schema.json  release-candidate-review.schema.json  research-memory-entry.schema.json  research-sanity-report.schema.json  run-manifest.schema.json  self-correction-report.schema.json
scripts/: public_bootstrap_preflight.py  repo_check.py  smoke_manifest.py
tests/: fake_recursive_agent.py  fake_recursive_agent_contract_failure.py  fake_recursive_agent_no_followup.py  runtime_artifact_helpers.py  runtime_delete_entry_root.py  runtime_fixtures.py  runtime_import_failure.py  runtime_misplaced_manifest.py  runtime_resume_helper.py  test_acceptance_campaigns.py  test_adaptation_training_runtime.py  test_agent_dialogue.py  test_analyze_cli.py  test_artifact_packager.py  test_bootstrap_support.py  test_bounded_memory.py  test_circuit_breaker.py  test_confound_guard.py  test_core_paths.py  test_disposable_user_simulation.py  test_disposable_user_simulation_campaign_accounting.py  test_dry_run.py  test_gpu_monitor.py  (+46 more)
(+310 files in other folders)
